# itfox_test

./: .env.pub  .gitignore  README.md  docker-compose.yml
server/: entrypoint.sh  manage.py  pyproject.toml
server/apps/news/: permissions.py
server/apps/news/admin/: __init__.py  comment.py  news.py
server/apps/news/models/: __init__.py  comment.py  like.py  news.py
server/apps/news/permissions/: __init__.py
server/apps/news/serializers/: __init__.py  comment.py  news.py
server/apps/news/urls/: __init__.py  comment.py  news.py
server/apps/news/viewsets/: __init__.py  comment.py  news.py
server/apps/users/admin/: __init__.py  group.py  user.py
server/apps/users/migrations/: 0001_initial.py
server/apps/users/models/: user.py
server/apps/users/serializers/: __init__.py  user.py
server/apps/users/urls/: auth.py
server/apps/users/views/: __init__.py
server/config/: api_urls.py  gunicorn.py  urls.py
server/config/migrations/news/: 0001_initial.py  0002_comment.py  0003_like.py  0004_like_create_date_like_text.py  0005_remove_like_create_date_remove_like_text.py
server/config/migrations/users/: 0001_initial.py
server/config/settings/: installed_apps.py  settings.py
